--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 /local.properties
 /.idea/caches
 /.idea/libraries
+/.idea/misc.xml
 /.idea/modules.xml
+/.idea/vcs.xml
 /.idea/workspace.xml
 .DS_Store
 /build
