--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "org.jetbrains.anko:anko:$anko_version"
+    implementation 'com.beust:klaxon:3.0.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.google.code.gson:gson:2.8.4'
 
     implementation 'com.android.support:design:27.1.1'
 }
