--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:4.0.1'
+        classpath 'com.google.firebase:firebase-plugins:1.0.4'
     }
 }
 
