map populated by using user's current location recyclerview setup at recommendation activity cleanup other minor changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
             android:name=".Recommendation"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_recommendation"
+            android:exported="true"
             android:theme="@style/FullscreenTheme" />
     </application>
 
