location details activity created location details response handled location details fields populated exandablelist added on opening hours other minor changes

--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven{
+            url "https://dl.bintray.com/hendraanggrian/pikasso"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
