--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.google.code.gson:gson:2.8.4'
     implementation 'com.android.support:design:27.1.1'
+    implementation 'com.github.bumptech.glide:glide:4.2.0'
+    //apply plugin: 'com.github.bumptech.glide:compiler:4.2.0'
+    //kapt 'com.github.bumptech.glide:compiler:4.2.0'
 }
+
 
 apply plugin: 'com.google.gms.google-services'
