--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -40,15 +40,18 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"
             android:exported="true"
+            android:label="@string/title_activity_maps"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".Recommendation"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_recommendation"
             android:exported="true"
+            android:label="@string/title_activity_recommendation"
             android:theme="@style/FullscreenTheme" />
+        <activity android:name=".PlaceInfo"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
