--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.4'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.github.bumptech.glide:glide:4.2.0'
+    implementation 'com.github.florent37:kotlinpleaseanimate:1.0.2'
+    implementation 'com.github.kittinunf.fuel:fuel-android:1.14.0'
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
     //apply plugin: 'com.github.bumptech.glide:compiler:4.2.0'
     //kapt 'com.github.bumptech.glide:compiler:4.2.0'
 }
