--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
-
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -51,9 +50,10 @@
             android:exported="true"
             android:label="@string/title_activity_recommendation"
             android:theme="@style/FullscreenTheme" />
-        <activity android:name=".PlaceInfo"
-            android:exported="true">
-        </activity>
+        <activity
+            android:name=".PlaceInfo"
+            android:exported="true"></activity>
+        <activity android:name=".chatactivity"></activity>
     </application>
 
 </manifest>
