--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
 
     <application
         android:allowBackup="true"
@@ -53,8 +54,11 @@
             android:theme="@style/FullscreenTheme" />
         <activity
             android:name=".PlaceInfo"
+            android:exported="true" />
+        <activity android:name=".chatactivity" />
+        <activity android:name=".userprofile" />
+        <activity android:name=".aboutus"
             android:exported="true"></activity>
-        <activity android:name=".chatactivity"></activity>
     </application>
 
 </manifest>
